--- a/ReactAspx/Views/Home/Index.cshtml
+++ b/ReactAspx/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "Home Page";
 }
 
+<link rel="stylesheet" type="text/css" href="~/Content/food.css">
+
 <div class="title-big">
     <img src="/Img/logo.png" style="width:100px"/>
     Philippe's restaurant.
