Add shopping cart functionality with React (2).

--- a/ReactAspx/Content/food.css
+++ b/ReactAspx/Content/food.css
@@ -15,3 +15,15 @@
     text-align: justify;
     vertical-align: top;
 }
+
+/*#dvcart {
+
+}
+
+#cartContent {
+
+}
+
+#greenBtn continueOrder {
+
+}*/
