Show error in Login.

--- a/ReactAspx/Views/Account/Login.cshtml
+++ b/ReactAspx/Views/Account/Login.cshtml
@@ -50,6 +50,9 @@
                     </p>*@
             }
         </section>
+        <div class="col-md-4 text-danger">
+            @ViewBag.ErrorMsg
+        </div>
     </div>
     <div class="col-md-4">
         <section id="socialLoginForm">
