--- a/ReactAspx/Views/Home/Index.cshtml
+++ b/ReactAspx/Views/Home/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "MyCoffee";
 }
 
 <link rel="stylesheet" type="text/css" href="~/Content/food.css">
 
 <div class="title-big">
-    <img src="/Img/logo.png" style="width:100px"/>
-    Philippe's restaurant.
+    @*<img src="/Img/logo.png" style="width:100px"/>
+    Philippe's restaurant.*@
+    <br/>
 </div>
 
 <div>
