Update about section.

--- a/ReactAspx/Views/Home/About.cshtml
+++ b/ReactAspx/Views/Home/About.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p style="margin-top:60px; margin-bottom: 20px;">MyCoffee is an online coffee house where you can order some delicious snacks, sandwiches, muffins and coffee drinks...</p>
+
+<img src="/Img/about.jpg" style="width:400px"/>
+
+<p style="margin-top:20px">This website was created for academic purposes using React and Asp.Net MVC 5 + PostgreSQL.</p>
