--- a/ReactAspx/Content/food.css
+++ b/ReactAspx/Content/food.css
@@ -42,14 +42,18 @@
 #dvmenu {
 	flex: 0 0 85%;
 	border: 0px #ccc solid;
+    margin: 4px;
 	/*overflow-y: scroll;*/
 }
 
 #dvmenu div {
-	width: 280px;
-	margin: 10px;
+	width: 220px;
+	margin-left: 2px;
+    margin-right: 2px;
+    margin-top: 4px;
+    margin-bottom: 4px;
 	display: inline-block;
-	text-align: justify;
+	text-align: left;
 	vertical-align: top;
 }
 
